--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,10 +1,3 @@
-~name: Drift Detection and Reconciliation
-
-on:
-  schedule:
-    - cron:  '0 0 * * *' # Runs at 00:00 UTC every day
-  workflow_dispatch:
-
 jobs:
   detect-and-reconcile:
     runs-on: ubuntu-latest
@@ -12,23 +5,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       
+      - name: Setup AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.0.0
+          terraform_version: 1.5.2
 
       - name: Terraform Init
         run: terraform init
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'us-east-1'
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -out=tfplan
+        run: terraform plan -no-color
 
       - name: Terraform Apply
-        if: steps.plan.outputs.stdout && !contains(steps.plan.outputs.stdout, 'No changes')
-        run: terraform apply -auto-approve tfplan
-~
+        if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
+        run: terraform apply -auto-approve -no-color
+
