--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,7 +2,7 @@ name: Detect and Reconcile Drift
 
 on:
   schedule:
-    - cron: '* * * * *' # Runs at 00:00 UTC every day
+    - cron: '*/5 * * * *' # Runs at 00:00 UTC every day
   workflow_dispatch: # This enables manual triggering of the workflow
 
 jobs:
