--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,7 +2,7 @@ name: Detect and Reconcile Drift
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs at 00:00 UTC every day
+    - cron: '0/5 * * * *' # Runs at 00:00 UTC every day
   workflow_dispatch:
 
 jobs:
